# aws-helper-bot

./: pyproject.toml
bot/: __main__.py  instances.py  utils.py  whitelist.py
